@@ -19,6 +19,7 @@ service-merger: change default DupAlgorithm from sameport (which focus only on D
 address-/service-merger:  extend location=any to run successful against firewall with vsys/multi-vsys
 addressgroup-/servicegroup-merger: introduce location=any for Panorama DG and Firewall vsys
 rule-edit: introduce 'filter=( schedule is [scheduler-name] )'
+rule-edit: introduce actions=schedule-set:[schedule-name]
 
 BUGFIX:
 - fix for pa_rule-edit 'filter=(rule is.unused.fast)' for PAN-OS version detection if connection is going through Panorama
